change in theater

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,12 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+
+    <!-- Google SEO describtion
+    ============================ -->
+    <title>Vännerna i Kungaskogen The Official | Snick & Snack</title>
+    <meta name="description" content="Vara schysst och en bra kompis-viktigt i nya barnboken och musiksagan Vännerna i Kungaskogen.">
+
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -39,7 +45,6 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     -->
-    <title>Kungaskogen</title>
   </head>
   <body>
     <noscript>
